--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KarmaQuest</title>
     <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Karmaquest" />
 
     <meta property="og:title" content="KarmaQuest" />
-    <meta property="og:description" content="Lovable Generated Project" />
+   
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+   
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  
   </head>
 
   <body>
